Change name of synapticPlasticity + better visualisation of test results

--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -97,6 +97,7 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "from scipy import sparse, stats\n",
     "from datasets.load_forecasting import load_dataset_forecasting\n",
     "from datasets.load_classification import load_dataset_classification\n",
     "\n",
@@ -243,8 +244,10 @@
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import train_model_for_prediction, init_reservoir, init_ip_reservoir_model, init_local_rule_reservoir\n",
+    "from performances.esn_model_evaluation import (train_model_for_prediction, init_reservoir, init_ip_reservoir, init_local_rule_reservoir, \n",
+    "                                                init_ip_local_rule_reservoir, init_readout)\n",
     "from analysis.richness import spectral_radius, pearson, squared_uncoupled_dynamics_alternative, condition_number\n",
+    "from reservoir.reservoir import init_matrices\n",
     "\n",
     "\n",
     "def evaluate_dataset_on_test(study, function_name, pretrain_data, train_data, test_data, Y_train, Y_test, is_instances_classification, nb_trials = 8, record_metrics=False):\n",
@@ -260,7 +263,6 @@
     "        hyperparams['use_full_instance'] = False\n",
     "\n",
     "    nb_jobs = 8\n",
-    "\n",
     "\n",
     "    RIDGE_COEF = 10**hyperparams['ridge']\n",
     "    \n",
@@ -301,31 +303,40 @@
     "                                    hyperparams['variance_target'], hyperparams['variance_spread'], function_name, is_instance=is_instances_classification, \n",
     "                                    use_full_instance = hyperparams['use_full_instance'], max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method = hyperparams['method'], \n",
     "                                    intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], n_jobs = nb_jobs)\n",
-    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\"]:\n",
+    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= hyperparams['spectral_radius'] / max(abs(eigen))\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function_name}\")\n",
     "        \n",
-    "\n",
     "        # unsupervised local rules\n",
     "        if is_instances_classification:\n",
-    "            unsupervised_pretrain = np.concatenate(train_data).astype(float)\n",
+    "            unsupervised_pretrain = np.concatenate(pretrain_data).astype(float)\n",
     "        else:\n",
-    "            unsupervised_pretrain = train_data.astype(float)\n",
+    "            unsupervised_pretrain = pretrain_data.astype(float)\n",
     "        if function_name == \"ip_correct\":\n",
-    "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, hyperparams['mu'], hyperparams['sigma'], hyperparams['leaky_rate'], \n",
-    "                                                         activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            reservoir = init_ip_reservoir(W, Win, bias, mu=hyperparams['mu'], sigma=hyperparams['sigma'], learning_rate=hyperparams['learning_rate'],\n",
+    "                                          leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function\n",
+    "                                          )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        elif function_name == \"anti_oja\":\n",
-    "            reservoir, readout = init_local_rule_reservoir(W, Win, bias, learning_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
-    "                                                           synapse_normalization=True, bcm_theta=None,\n",
-    "                                                           leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
-    "                                                           ridge_coef=RIDGE_COEF)\n",
+    "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
+    "                                                   synapse_normalization=True, bcm_theta=None,\n",
+    "                                                   leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
+    "                                                   )\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        elif function_name == \"ip-anti-oja\":\n",
+    "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
+    "                                                      synapse_normalization=True, bcm_theta=None,\n",
+    "                                                      mu=hyperparams['mu'], sigma=hyperparams['sigma'], learning_rate=hyperparams['learning_rate'],\n",
+    "                                                      leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
+    "                                                      )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
     "        else:\n",
-    "            reservoir, readout = init_reservoir(W, Win, bias, hyperparams['leaky_rate'], activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            reservoir = init_reservoir(W, Win, bias, leaky_rate, activation_function)\n",
+    "        readout = init_readout(ridge_coef=RIDGE_COEF)\n",
     "\n",
+    "        \n",
     "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
     "            mode = \"sequence-to-vector\"\n",
@@ -385,7 +396,7 @@
     "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
-    "for dataset_name in [\"MackeyGlass\", \"Lorenz\", \"Sunspot\", \"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SpokenArabicDigits\"]: \n",
+    "for dataset_name in [ \"SPEECHCOMMANDS\"]: \n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot\", \"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
@@ -396,7 +407,7 @@
     "    print(dataset_name)\n",
     "    # Simulate your data and loop for evaluation\n",
     "\n",
-    "    for function_name in [\"anti-oja\"]: # \"desp\", \"hadsp\", \"random\", \"random_ei\", \n",
+    "    for function_name in [\"anti-oja\"]: # \"desp\", \"hadsp\", \"random\", \"random_ei\", \"ip-anti-oja\", \"anti-oja\", \"ip_correct\"\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "    \n",
@@ -488,28 +499,8 @@
     "    previous_results.to_csv(file_name, index=False)\n",
     "    print(f\"{file_name} created successfully.\")\n",
     "\n",
-    "print(previous_results)\n",
-    "print(f\"Results saved to {file_name}.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccc1b83e-91a5-41b5-ad63-0c4a4284215b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d01dc3b5-115a-4fc6-a80b-ea1a1ff84952",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Function'].unique()"
+    "print(f\"Results saved to {file_name}.\")\n",
+    "previous_results"
    ]
   },
   {
@@ -519,54 +510,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from seaborn import heatmap, color_palette\n",
+    "import pandas as pd\n",
+    "from seaborn import color_palette\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "all_results = pd.read_csv(file_name)\n",
-    "\n",
     "df = pd.DataFrame(all_results)\n",
-    "# Clean 'Average Score' and 'Standard Deviation' column (remove '±' and '%' and convert to float)\n",
+    "\n",
+    "# Clean data as before\n",
     "df['Average Score'] = df['Average Score'].astype(str).str.replace('%', '').astype(float)\n",
     "df['Standard Deviation'] = df['Standard Deviation'].str.replace('±', '').str.replace('%', '').astype(float)\n",
+    "\n",
     "df = df[df['Function'] != 'ip']\n",
+    "\n",
+    "df['Function'] = df['Function'].str.replace('ip-anti-oja', 'IP +\\nAnti-Oja')\n",
+    "df['Function'] = df['Function'].str.replace('ip_correct', 'IP')\n",
+    "df['Function'] = df['Function'].str.replace('anti-oja', 'Anti-Oja')\n",
+    "\n",
     "df['Function'] = df['Function'].str.replace('desp', 'variance HAG')\n",
     "df['Function'] = df['Function'].str.replace('hadsp', 'mean HAG')\n",
     "df['Function'] = df['Function'].str.replace('random_ei', 'ESN')\n",
     "df['Function'] = df['Function'].str.replace('random', 'E-ESN')\n",
-    "df['Function'] = df['Function'].str.replace('ip_correct', 'IP')\n",
-    "df['Function'] = df['Function'].str.replace('anti-oja', 'Anti-Oja')\n",
     "\n",
-    "if file_name == \"test_results_classification.csv\":\n",
+    "# Optional replacements for dataset names\n",
+    "if file_name == \"outputs/test_results_classification.csv\":\n",
     "    df['Dataset'] = df['Dataset'].str.replace('SpokenArabicDigits', 'Spoken\\nArabic\\nDigits')\n",
     "    df['Dataset'] = df['Dataset'].str.replace('SPEECHCOMMANDS', 'SPEECH\\nCOMMANDS')\n",
     "    df['Dataset'] = df['Dataset'].str.replace('JapaneseVowels', 'Japanese\\nVowels')\n",
     "\n",
-    "# remove SPEECHCOMMANDS\n",
-    "df = df[df['Dataset'] != 'SPEECHCOMMANDS']\n",
+    "# -- Define color palettes for each group --\n",
+    "blues = color_palette(\"Blues\", 3)      # 3 shades of blue\n",
+    "oranges = color_palette(\"Oranges\", 2)  # 2 shades of orange\n",
+    "greens = color_palette(\"Greens\", 2)    # 2 shades of green\n",
+    "\n",
+    "# -- Map each function to its color --\n",
+    "function_colors = {\n",
+    "    'E-ESN':              greens[0],\n",
+    "    'ESN':                greens[1],\n",
+    "    'IP':                 blues[0],\n",
+    "    'Anti-Oja':           blues[1],\n",
+    "    'IP +\\nAnti-Oja':     blues[2],\n",
+    "    'mean HAG':           oranges[0],\n",
+    "    'variance HAG':       oranges[1],\n",
+    "}\n",
+    "\n",
+    "# If you want a specific order for the bars, you can enforce it:\n",
+    "functions_order = [\n",
+    "    'E-ESN',\n",
+    "    'ESN', \n",
+    "    'IP', \n",
+    "    'Anti-Oja', \n",
+    "    'IP +\\nAnti-Oja', \n",
+    "    'mean HAG', \n",
+    "    'variance HAG', \n",
+    "]\n",
+    "\n",
+    "# Filter out (or keep) only the functions actually present in df\n",
+    "functions = [f for f in functions_order if f in df['Function'].unique()]\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
-    "functions = df['Function'].unique()\n",
-    "x = np.arange(len(df['Dataset'].unique()))  # The label locations\n",
-    "width = 0.06  # Width of the bars\n",
-    "colors = color_palette(\"tab20\")\n",
+    "\n",
+    "datasets = df['Dataset'].unique()\n",
+    "x = np.arange(len(datasets))  # The label locations\n",
+    "width = 0.1                  # Width of each bar\n",
     "\n",
     "for i, func in enumerate(functions):\n",
+    "    # Grab only rows for this function\n",
     "    values = df[df['Function'] == func]\n",
-    "    ax.bar(x + i * width, values['Average Score'], width, label=func, yerr=values['Standard Deviation'], capsize=5, color=colors[i % len(colors)])\n",
+    "    \n",
+    "    # Make sure the order of the 'Dataset' matches x in ascending order\n",
+    "    # so that bar positions align with x-ticks\n",
+    "    # One way: sort or reindex by the unique dataset order\n",
+    "    # We create a Series in the same order as 'datasets'\n",
+    "    merged = pd.DataFrame({'Dataset': datasets}).merge(values, on='Dataset', how='left')\n",
+    "    \n",
+    "    ax.bar(\n",
+    "        x + i * width,\n",
+    "        merged['Average Score'],\n",
+    "        width,\n",
+    "        label=func,\n",
+    "        yerr=merged['Standard Deviation'],\n",
+    "        capsize=5,\n",
+    "        color=function_colors[func]\n",
+    "    )\n",
     "\n",
     "ax.set_xlabel('Dataset')\n",
     "ax.set_ylabel('Average Score')\n",
-    "fontsize=18\n",
+    "fontsize = 14\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Steps', size=fontsize)\n",
     "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
     "plt.legend(title='Generation', fontsize=fontsize)\n",
-    "ax.set_xticks(x + width * (len(functions) - 1) / 2)\n",
-    "ax.set_xticklabels(df['Dataset'].unique())\n",
-    "plt.legend(fontsize=fontsize)\n",
+    "\n",
+    "# Position x-ticks in the center of all the bars for each dataset\n",
+    "ax.set_xticks(x + width * (len(functions)-1)/2)\n",
+    "ax.set_xticklabels(datasets)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -575,9 +616,7 @@
   {
    "cell_type": "markdown",
    "id": "8ae919b11422d98a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Best parameters"
    ]
@@ -609,30 +648,6 @@
     "\n",
     "# Initialize an empty list to store results\n",
     "results = []\n",
-    "\n",
-    "for dataset in datasets:\n",
-    "    study = retrieve_best_model(\"ip\", dataset, is_multivariate=True, variate_type = \"multi\", data_type = \"normal\")\n",
-    "    best_trial = study.best_value\n",
-    "    print(best_trial)\n",
-    "\n",
-    "##%%\n",
-    "import os\n",
-    "import optuna\n",
-    "import pandas as pd\n",
-    "from performances.utility import camel_to_snake, retrieve_best_model\n",
-    "\n",
-    "\n",
-    "# List of datasets (extract from filenames)\n",
-    "datasets = [\n",
-    "    \"SpokenArabicDigits\",\n",
-    "    \"JapaneseVowels\",\n",
-    "    \"FSDD\",\n",
-    "    \"SPEECHCOMMANDS\",\n",
-    "    \"CatsDogs\",\n",
-    "    \"MackeyGlass\",\n",
-    "    \"Lorenz\",\n",
-    "    \"Sunspot\",\n",
-    "]\n",
     "\n",
     "# Initialize an empty list to store results\n",
     "results = []\n",
@@ -712,7 +727,7 @@
     "for dataset in datasets:\n",
     "    print(dataset)\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, data_type, noise_std)\n",
-    "    for function_name in [\"random\", \"random_ei\", \"ip_correct\", \"hadsp\", \"desp\", \"anti-oja\"]:\n",
+    "    for function_name in [\"random\", \"random_ei\", \"ip_correct\", \"hadsp\", \"desp\", \"anti-oja\", \"ip-anti-oja\"]:\n",
     "        # Get the best trial from the study\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
@@ -795,6 +810,7 @@
     "    'random_ei': 'ESN',\n",
     "    'ip_correct': 'IP-ESN',\n",
     "    'anti-oja': 'Anti-Oja',\n",
+    "    'ip-anti-oja': 'IP\\n+ Anti Oja',\n",
     "    'hadsp': 'Mean-HAG',      \n",
     "    'desp': 'Variance-HAG'  \n",
     "}\n",
@@ -803,7 +819,7 @@
     "data['Algorithm'] = data['function_name'].map(function_mapping)\n",
     "\n",
     "# Extract unique functions and datasets for plotting\n",
-    "functions = ['E-ESN', 'ESN', 'IP-ESN', 'Anti-Oja', 'Mean-HAG', 'Variance-HAG'] #data['Algorithm'].unique()\n",
+    "functions = ['E-ESN', 'ESN', 'IP-ESN', 'Anti-Oja', 'IP\\n+ Anti Oja', 'Mean-HAG', 'Variance-HAG'] #data['Algorithm'].unique()\n",
     "datasets = data['dataset'].unique()\n",
     "\n",
     "# Prepare color palette for the bars\n",
@@ -876,9 +892,7 @@
   {
    "cell_type": "markdown",
    "id": "f86a468b-42a9-4c8e-ae77-cc0ebfaba1ae",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Final matrix"
    ]
