Update hyperparam opt and analysis

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -50,21 +50,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "099fb604-5450-495e-8e6b-b6ff9eb78ff4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-20T23:34:32.438023Z",
-     "iopub.status.busy": "2024-11-20T23:34:32.437367Z",
-     "iopub.status.idle": "2024-11-20T23:34:32.885775Z",
-     "shell.execute_reply": "2024-11-20T23:34:32.885504Z",
-     "shell.execute_reply.started": "2024-11-20T23:34:32.437978Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "706b626a-8fa9-452d-bc75-6e2fe38ca27a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_forecasting import load_dataset_forecasting\n",
     "is_instances_classification = False\n",
-    "dataset_name = \"Lorenz\"\n",
+    "dataset_name = \"NARMA\"\n",
     "step_ahead=5\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_forecasting(dataset_name, step_ahead, visualize=True)\n",
@@ -105,11 +99,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1e39882-bed2-4c3a-97f9-962a9e7247f1",
+   "cell_type": "raw",
+   "id": "4be2c9b0-f2e3-4571-b7eb-6064bcb7dcf9",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from datasets.load_classification import load_dataset_classification\n",
     "is_instances_classification = True\n",
@@ -121,11 +113,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65d5ddde-f921-468c-abfc-cb56d1255be3",
+   "cell_type": "raw",
+   "id": "522bc04e-ca9d-4372-ac7e-eaa5a560099d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
@@ -156,7 +146,7 @@
     "# SEED\n",
     "SEED = 49387\n",
     "\n",
-    "use_cross_validation = False\n",
+    "use_cross_validation = True\n",
     "\n",
     "n_splits=2\n",
     "\n",
@@ -341,6 +331,59 @@
     "## Visualisation checks\n",
     "\n",
     "test if the filtering happened correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3feec40f-0a7c-44bf-b9e2-cbf3cd5d275e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Define the range around the merge point to plot\n",
+    "start_index = 0\n",
+    "end_index = 3000\n",
+    "\n",
+    "# Plot for a subset N features within a range arround transition from train to test\n",
+    "N = 3\n",
+    "plt.figure(figsize=(16, 5))\n",
+    "for i in [1, 2, 17]: \n",
+    "    plt.plot(range(start_index, end_index), X_train_band[start_index:end_index, i], label=f'Feature {i}')\n",
+    "plt.title('Feature Values Around Merge Point')\n",
+    "plt.xlabel('Sample Index')\n",
+    "plt.ylabel('Feature Value')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71a1a304-8116-4cb3-a473-1b71329335fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate train and test arrays for plotting\n",
+    "combined_data = np.concatenate((X_train_band, X_val_band), axis=0)\n",
+    "\n",
+    "# Calculate the merge point index\n",
+    "merge_point_index = X_train_band.shape[0]\n",
+    "\n",
+    "# Define the range around the merge point to plot\n",
+    "start_index = merge_point_index - 1000\n",
+    "end_index = merge_point_index + 2000\n",
+    "\n",
+    "# Plot for a subset N features within a range arround transition from train to test\n",
+    "N = 3\n",
+    "plt.figure(figsize=(16, 5))\n",
+    "for i in [1, 2, 17]: \n",
+    "    plt.plot(range(start_index, end_index), combined_data[start_index:end_index, i], label=f'Feature {i}')\n",
+    "plt.title('Feature Values Around Merge Point')\n",
+    "plt.xlabel('Sample Index')\n",
+    "plt.ylabel('Feature Value')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1658,20 +1701,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir, init_ip_reservoir\n",
+    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir, init_ip_reservoir, init_readout\n",
     "\n",
-    "reservoir_hag_multi, readout_hag_multi = init_reservoir(W_hag_multi, Win_hag_multi, bias_hag_multi, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
-    "reservoir_random_multi, readout_random_multi = init_reservoir(W_random_multi, Win_random_multi, bias_random_multi, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "reservoir_hag_multi = init_reservoir(W_hag_multi, Win_hag_multi, bias_hag_multi, leaky_rate, activation_function)\n",
+    "readout_hag_multi = init_readout(ridge_coef=RIDGE_COEF)\n",
+    "reservoir_random_multi = init_reservoir(W_random_multi, Win_random_multi, bias_random_multi, leaky_rate, activation_function)\n",
+    "readout_random_multi = init_readout(ridge_coef=RIDGE_COEF)\n",
     "\n",
     "if False: # TODO: change condition for when we want to plot univariate data\n",
-    "    reservoir_hag_uni, readout_hag_uni  = init_reservoir_model(W_hag_uni, Win_hag_uni, bias_hag_uni, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
-    "    reservoir_random_uni, readout_random_uni = init_reservoir_model(W_random_uni, Win_random_uni, bias_random_uni, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n"
+    "    reservoir_hag_uni  = init_reservoir_model(W_hag_uni, Win_hag_uni, bias_hag_uni, leaky_rate, activation_function)\n",
+    "    readout_hag_uni = init_readout(ridge_coef=RIDGE_COEF)\n",
+    "    reservoir_random_uni = init_reservoir_model(W_random_uni, Win_random_uni, bias_random_uni, leaky_rate, activation_function)\n",
+    "    readout_hag_uni = init_readout(ridge_coef=RIDGE_COEF)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e27380a6-3976-442d-8bb0-34bfc142985a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Classification"
    ]
@@ -1926,19 +1975,19 @@
     "    train_data_uni = X_train # X_train_noisy or X_train\n",
     "    \n",
     "    # Training random + MG\n",
-    "    esn_random_uni = train_model_for_prediction(reservoir, readout, train_data_uni, Y_train, RIDGE_COEF)\n",
+    "    esn_random_uni = train_model_for_prediction(reservoir_random_uni, readout_random_uni, train_data_uni, Y_train)\n",
     "    \n",
     "    # Training for hag + MG\n",
-    "    esn_hag_uni = train_model_for_prediction(reservoir, readout, train_data_uni, Y_train, RIDGE_COEF)\n",
+    "    esn_hag_uni = train_model_for_prediction(reservoir_hag_uni, readout_hag_uni, train_data_uni, Y_train)\n",
     "\n",
     "    \n",
     "train_data_multi = X_train_band # X_train_band_noisy or train_band_inputs\n",
     "\n",
     "# Training random + bandfilter\n",
-    "esn_random_multi = train_model_for_prediction(reservoir, readout, bias_random_multi, leaky_rate, activation_function, train_data_multi, Y_train, RIDGE_COEF)\n",
+    "esn_random_multi = train_model_for_prediction(reservoir_random_multi, readout_random_multi, train_data_multi, Y_train)\n",
     "\n",
     "# Training output HASDP + bandfilter\n",
-    "esn_hag_multi = train_model_for_prediction(reservoir, readout, leaky_rate, activation_function, train_data_multi, Y_train, RIDGE_COEF)\n",
+    "esn_hag_multi = train_model_for_prediction(reservoir_hag_multi, readout_hag_multi,train_data_multi, Y_train)\n",
     "                                                       "
    ]
   },
@@ -2039,7 +2088,7 @@
    "source": [
     "from plots.plots import plot_results\n",
     "\n",
-    "START_STEP = 30\n",
+    "START_STEP = 50\n",
     "END_STEP = 500\n",
     "slice_range = slice(START_STEP, END_STEP)\n",
     "\n",
