--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -371,10 +371,11 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "808838b6a03ba5bd",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Pretraining\n",
     "from reservoir.reservoir import init_matrices\n",
@@ -546,20 +547,20 @@
     "    average_score = total_score / nb_splits  # Average the score\n",
     "\n",
     "    return average_score\n"
-   ],
-   "id": "808838b6a03ba5bd"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b3b55dc47e084ca3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import optuna\n",
     "from optuna.samplers import TPESampler\n",
     "from performances.utility import camel_to_snake\n",
     "\n",
-    "url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
+    "url= \"sqlite:///tpe_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
     "print(url)\n",
     "\n",
     "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
@@ -588,8 +589,7 @@
     "\n",
     "#study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
     "#study.optimize(objective, n_trials=N_TRIALS)"
-   ],
-   "id": "b3b55dc47e084ca3"
+   ]
   },
   {
    "cell_type": "code",
