bug correction + comparaiosn hyperparamters methods + imporovment visualisation

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -125,14 +125,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "86961904-ad36-4af8-ad21-6d51f491da61",
-   "metadata": {},
-   "source": [
-    "# Activation function"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "615a38d2df41a727",
@@ -394,7 +386,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"ip_correct\" # \"desp\" ou \"hadsp\", \"random\", \"random_ei\", \"ip\", \"ip_correct\" or \"nvar\"\n",
+    "function_name = \"ip_correct\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"ip\", \"ip_correct\" or \"nvar\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -418,7 +410,7 @@
     "    if function_name == \"hadsp\":\n",
     "        target_rate = trial.suggest_float('target_rate', 0.5, 1, step=0.01)\n",
     "        rate_spread = trial.suggest_float('rate_spread', 0.01, 0.4, step=0.005)\n",
-    "        method = trial.suggest_categorical(\"method\", [\"random\", \"pearson\"])\n",
+    "        method = trial.suggest_categorical(\"method\", [\"random_ee\", \"pearson\"])\n",
     "    # DESP\n",
     "    elif function_name == \"desp\":\n",
     "        variance_target = trial.suggest_float('variance_target', 0.001, 0.02, step=0.001)\n",
@@ -426,7 +418,7 @@
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
-    "    elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
+    "    elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
     "    else:\n",
@@ -473,10 +465,9 @@
     "\n",
     "        # INITIALISATION AND UNSUPERVISED PRETRAINING\n",
     "        if function_name == \"random_ei\":\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(-1, 1),\n",
-    "                                         seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
     "        else:\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(0, 1), seed=random.randint(0, 1000))\n",
     "        bias *= bias_scaling\n",
     "        Win *= input_scaling\n",
     "\n",
@@ -495,7 +486,7 @@
     "                                         max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method=method,\n",
     "                                         intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef,\n",
     "                                         n_jobs=nb_jobs_per_trial)\n",
-    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
+    "        elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
     "        else:\n",
@@ -594,15 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0aa088-4f4e-4598-8424-0a6c6ea78620",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c048324a-889c-4459-94c8-d6d8c57af9e1",
+   "id": "97544f28-0c1a-431a-aa3c-fada8bd1f6b1",
    "metadata": {},
    "outputs": [],
    "source": []
