Parrallelization score forecasting + replace name random for random_ee + further bug correction

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -464,10 +464,10 @@
     "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "\n",
     "        # INITIALISATION AND UNSUPERVISED PRETRAINING\n",
-    "        if function_name == \"random_ei\":\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
-    "        else:\n",
+    "        if function_name == \"random_ee\":\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(0, 1), seed=random.randint(0, 1000))\n",
+    "        else:\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(loc=-1, scale=2), seed=random.randint(0, 1000))\n",
     "        bias *= bias_scaling\n",
     "        Win *= input_scaling\n",
     "\n",
