--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -386,7 +386,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"ip_correct\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"ip\", \"ip_correct\" or \"nvar\"\n",
+    "function_name = \"anti_oja_fast\" # \"desp\" ou \"hadsp\", \"random_ee\", \"random_ei\", \"ip\", \"ip_correct\" or \"anti_oja_fast\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -418,7 +418,7 @@
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
-    "    elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
+    "    elif function_name in [\"random_ee\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"anti_oja_fast\", \"ip-anti-oja\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
     "    else:\n",
@@ -428,7 +428,7 @@
     "        mu = trial.suggest_float('mu', 0, 1)\n",
     "        sigma = trial.suggest_float('sigma', 0, 1)\n",
     "        learning_rate = trial.suggest_float('learning_rate', 1e-6, 1e-1, log=True)\n",
-    "    if function_name in [\"anti-oja\", \"ip-anti-oja\"]:\n",
+    "    if function_name in [\"anti-oja\", \"anti_oja_fast\", \"ip-anti-oja\"]:\n",
     "        # We often use a log-uniform distribution for learning rates:\n",
     "        oja_eta = trial.suggest_float('oja_eta', 1e-5, 1e-1, log=True)\n",
     "\n",
@@ -505,6 +505,12 @@
     "        elif function_name == \"anti_oja\":\n",
     "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
     "                                                  synapse_normalization=True, bcm_theta=None,\n",
+    "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
+    "                                                  )\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        elif function_name == \"anti_oja_fast\":\n",
+    "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
+    "                                                  synapse_normalization=False, bcm_theta=None,\n",
     "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
     "                                                  )\n",
     "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
